--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
+.Add {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(255, 94, 0, 0.281);
+  border-radius: 10px;
+}
+
+.Edit {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgba(127, 170, 9, 0.548);
+  border-radius: 10px;
+}
+
+.UserCard {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 20px;
+}
+
+.NoPage {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: #8b0000;
+}
+
+.cards {
+  width: 1000px;
+  height: 400px;
+  padding: 20px;
+  background-color: aliceblue;
+  border-radius: 20px;
+
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.cardTittle {
+  display: flex;
+  align-items: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  @media only screen and (max-width: 440px) {
+    .Add {
+    width: 400px;
+    }
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  @media only screen and (max-width: 900px) {
+    .NoPage {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      min-height: 50vh;
+      background-color: #8b0000;
+    }
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+  
+ 
+  
+
+
